docs: improve API docs
