# presentation/transaction/controller.go
@@ -11,11 +11,12 @@ import (
 // createTransaction godoc
 //
 // @Summary		Create Transaction
+// @Tags	transactions
 // @Description	This endpoint receives a transaction from the request body and adds it to the database
 // @Accept			json
 // @Produce		json
 // @Param		body	body		dtos.TransactionDTO		true	"Request body"
-// @Success		200		{object}	dtos.Response{data=entities.Transaction}
+// @Success		200		{object}	dtos.Response{data=dtos.TransactionResponseDataDTO,error=nil}
 // @Router			/transaction [post]
 func createTransaction(c *gin.Context) {
 	logger := c.MustGet("logger").(*slog.Logger)
